deploy/local/model-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-services
  labels:
    app: model
spec:
  replicas: 5
  selector:
    matchLabels:
      app: model-services
  template:
    metadata:
      labels:
        app: model-services
    spec:
      containers:
      - name: model-services
        image: model-services
        ports:
        - containerPort: 5672
        imagePullPolicy: IfNotPresent
