deploy/local/pdf-text.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-text
  labels:
    app: pdf-text
spec:
  replicas: 5
  selector:
    matchLabels:
      app: pdf-text
  template:
    metadata:
      labels:
        app: pdf-text
    spec:
      containers:
      - name: pdf-text
        image: pdf-text
        ports:
        - containerPort: 5672
        imagePullPolicy: IfNotPresent
