deploy/local/search-apis.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-apis
  labels:
    app: search-apis
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: search-apis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-apis
  labels:
    app: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-apis
  template:
    metadata:
      labels:
        app: search-apis
    spec:
      containers:
      - name: search-apis
        image: search-apis
        ports:
        - containerPort: 5672
        - containerPort: 8000
        imagePullPolicy: IfNotPresent
