deploy/local/search-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-frontend
  labels:
    app: search-frontend
spec:
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: search-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-frontend
  labels:
    app: model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-frontend
  template:
    metadata:
      labels:
        app: search-frontend
    spec:
      containers:
      - name: search-frontend
        image: search-frontend
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
